[package]
name = "nexus_mods_api"
version = "0.0.1-alpha"
edition = "2024"
license = "MIT"
repository = "https://github.com/dbidwell94/rusty_nexus"
authors = ["Devin Bidwell <dbidwell94@gmail.com>"]
keywords = ["Nexus", "Mods", "Raxios", "API", "Wrapper"]
description = "Rust wrapper for the official Nexus Mods API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134" }
anyhow = { version = "1.0.95" }
reqwest = { version = "0.12.12", features = ["json"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["test-util", "macros"] }
dotenv = { version = "0.15.0" }
dotenv_codegen = { version = "0.15.0" }
